--- a/src/Metronic/AdminBundle/Resources/views/layout/javascripts.html.twig
+++ b/src/Metronic/AdminBundle/Resources/views/layout/javascripts.html.twig
@@ -15,6 +15,8 @@
 <script src="/bundles/metronicadmin/plugins/uniform/jquery.uniform.min.js" type="text/javascript" ></script>
 <script type="text/javascript" src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
+<script type="text/javascript" src="{{ asset('bundles/bazingaexposetranslation/js/translator.min.js') }}"></script>
+<script type="text/javascript" src="{{ url('bazinga_exposetranslation_js') }}"></script>
 <!-- END CORE PLUGINS -->
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script src="/bundles/metronicadmin/scripts/app.js" type="text/javascript"></script>
