--- a/src/WSP/PromoBundle/Resources/public/css/custom.css
+++ b/src/WSP/PromoBundle/Resources/public/css/custom.css
@@ -50,9 +50,8 @@
 
 .testo {
     text-align: justify;
-    color: #000 !important;
     font-size: 1.15em;
-    text-shadow: 0px 0px 4px #fff;
+    text-shadow: 0px 0px 4px #000;
     margin-bottom: 10px;
 }
 
