--- a/src/WSP/PromoBundle/Resources/views/Default/index.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/index.html.twig
@@ -5,19 +5,24 @@
 <link href="/bundles/wsppromo/css/custom.css" rel="stylesheet" type="text/css"/>
 {% endblock %}
 {% block js %}
+<script src="/bundles/metronicadmin/plugins/jquery-validation/dist/jquery.validate.min.js" type="text/javascript"></script>
+<script src="/bundles/metronicadmin/plugins/jquery-validation/dist/additional-methods.min.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/plugins/countdown/jquery.countdown.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/scripts/coming-soon.js" type="text/javascript"></script>
 <script src="/bundles/wsppromo/js/vertical_bar.js" type="text/javascript"></script>
+<script src="/bundles/wsppromo/js/contact_form.js" type="text/javascript"></script>
+<script type="text/javascript" src="{{ url('bazinga_exposetranslation_js', { 'domain_name': 'WSPPromo' }) }}"></script>
 {% endblock %}
 {% block ready_js %}
 VerticalBar.init();
 ComingSoon.init();
+ContactForm.init();
 {% endblock %}
 
 {% block precontent %}
 <hgroup class="no-display">
     <h1>World Sticker Prize</h1>
-    <h2>Il tuo Business è il nostro Business!</h2>
+    <h2>{{ 'promo.h2'|trans({}, "WSPPromo") }}</h2>
 </hgroup>
 <div class="header navbar navbar-inverse navbar-fixed-top trasparent">
     <div class="vertical-title">
@@ -27,27 +32,27 @@ ComingSoon.init();
 {% endblock %}
 
 {% block content %}
-<h3 class="slogan">Il tuo <b>Business</b><br/>è il nostro <b>Business</b></h3>
+<h3 class="slogan">{{ 'content.business'|trans({}, "WSPPromo")|raw }}</h3>
 <div class="testo">
-    Qui frase che spiega i motivivi...
-    <div id="spot">
-        Qui frasi a girare...
-    </div>
+    <p>{{ 'content.businessdetail'|trans({}, "WSPPromo")|raw }}</p>
+    <p id="spot">
+        {{ 'content.frasi.1'|trans({}, "WSPPromo")|raw }}
+    </p>
 </div>
-<h4 class="slogan">Vuoi più informazioni?<br/>Torna a visitarci, presto saremo<br/><b>On-Line</b></h4>
+<h4 class="slogan">{{ 'content.moreinfo'|trans({}, "WSPPromo")|raw }}</h4>
 {% endblock %}
 
 {% block postcontent %}
-<div class="content trasparent grassetto">
-    Vuoi essere uno dei primi a iscriverti a <b>World Sticker Price</b>?<br/>
-    <form class="form-inline" action="#">
+<div class="content trasparent grassetto" id="contact">
+    {{ 'contact.question'|trans({}, "WSPPromo")|raw }}<br/>
+    <form class="form-inline" onsubmit="return false;">
             <div class="input-group input-large">
-                    <input type="text" class="form-control" placeholder="Scrivi qui la tua email">
+                    <input id="contact_email" type="email" class="form-control" name="contact" placeholder="{{ 'contact.placeholder'|trans({}, "WSPPromo") }}">
                     <span class="input-group-btn">
-                    <button class="btn yellow" type="button"><span>Scrivici</span> <i class="m-icon-swapright m-icon-white"></i></button>
+                    <button class="btn yellow" id="contact_btn" type="button"><span>{{ 'contact.button'|trans({}, "WSPPromo")|raw }}</span> <i class="m-icon-swapright m-icon-white"></i></button>
                     </span>
             </div>
-    </form> e ti contatteremo presto!
+    </form> {{ 'contact.postaction'|trans({}, "WSPPromo")|raw }}
 </div>
 <div class="coming-soon-countdown">
     <div id="defaultCountdown"></div>
