--- a/src/WSP/PromoBundle/Resources/public/css/custom.css
+++ b/src/WSP/PromoBundle/Resources/public/css/custom.css
@@ -1,4 +1,16 @@
+@font-face {
+    font-family: 'helveticaregular';
+    src: url('../../wspadmin/fonts/helvetica-webfont.eot');
+    src: url('../../wspadmin/fonts/helvetica-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../wspadmin/fonts/helvetica-webfont.woff') format('woff'),
+         url('../../wspadmin/fonts/helvetica-webfont.ttf') format('truetype'),
+         url('../../wspadmin/fonts/helvetica-webfont.svg#helveticaregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .vertical-title {
+    font-family: 'helveticaregular';
     display: block; 
     position: relative;
 
@@ -35,13 +47,14 @@
 }
 
 .vertical-title span.solid-yellow{
-    border: 3px solid #ffe42e;
+    border: 8px solid #ffe42e;
     margin: 0px;
     color: #000;
     background-color: #ffe42e;
 }
 
 .slogan {
+    font-family: 'helveticaregular';
     margin-top: 0px;
     text-align: center;
     color: #ffe42e !important;
@@ -49,6 +62,7 @@
 }
 
 .testo {
+    font-family: 'helveticaregular';
     text-align: justify;
     font-size: 1.15em;
     text-shadow: 0px 0px 4px #000;
@@ -68,6 +82,7 @@
 }
 
 .coming-soon-countdown {
+    font-family: 'helveticaregular';
     width: 500px ;
     margin-left: auto;
     margin-right: auto;
@@ -82,7 +97,9 @@
 }
 
 .login .content {
+    font-family: 'helveticaregular';
     width: 460px !important;
+    text-align: center !important;
 }
 
 .login .logo {
@@ -90,16 +107,6 @@
 }
 
 .input-group {
-    margin: 0 auto;
-}
-
-@font-face {
     font-family: 'helveticaregular';
-    src: url('../font/helvetica-webfont.eot');
-    src: url('../font/helvetica-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../font/helvetica-webfont.woff') format('woff'),
-         url('../font/helvetica-webfont.ttf') format('truetype'),
-         url('../font/helvetica-webfont.svg#helveticaregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    margin: 0 auto;
 }
