--- a/src/WSP/PromoBundle/Resources/views/Default/index.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/index.html.twig
@@ -3,8 +3,10 @@
 {% block css %}
 <link href="/bundles/metronicadmin/css/pages/coming-soon.css" rel="stylesheet" type="text/css"/>
 <link href="/bundles/wsppromo/css/custom.css" rel="stylesheet" type="text/css"/>
+
 {% endblock %}
 {% block js %}
+<script src="/bundles/wspadmin/js/soft.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/plugins/jquery-validation/dist/jquery.validate.min.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/plugins/jquery-validation/dist/additional-methods.min.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/plugins/countdown/jquery.countdown.js" type="text/javascript"></script>
@@ -26,7 +28,7 @@ ContactForm.init();
 </hgroup>
 <div class="header navbar navbar-inverse navbar-fixed-top trasparent">
     <div class="vertical-title">
-        <span class="red">W</span>orld <span class="red">S</span>ticker <span class="solid-yellow"><span class="red">P</span>rize<span class="red">
+        <span class="red">W</span>orld <span class="red">S</span>ticker <span class="solid-yellow"><span class="red">P</span>rice<span class="red">
     </div>
 </div>
 {% endblock %}
