--- a/src/Hours/VideoBundle/Resources/views/base.html.twig
+++ b/src/Hours/VideoBundle/Resources/views/base.html.twig
@@ -110,13 +110,13 @@
                                             <!-- container -->
                                             <div class="container left">
 
-                                                <h1>{{ section.title|trans({}, translateDomain) }}</h1>
+                                                <h1>{{ (section.title)|trans({}, translateDomain) }}</h1>
                                                     {% if section.text is defined %}
                                                 <div class="sixteen columns">
                                                     {% if section.params is defined %}
-                                                        <p>{{ section.text|trans(section.params, translateDomain)|raw }}</p>
+                                                        <p>{{ (section.text)|trans(section.params, translateDomain)|raw }}</p>
                                                     {% else %}
-                                                        <p>{{ section.text|trans({}, translateDomain)|raw }}</p>
+                                                        <p>{{ (section.text)|trans({}, translateDomain)|raw }}</p>
                                                     {% endif  %}
                                                 </div>
                                                     {% endif %}
@@ -124,9 +124,9 @@
                                                         {% for part in section.parts %}
                                                             <div class="{% if section.parts|length == 1 %}sixteen columns{% elseif section.parts|length == 2 %}eight columns column{% else %}one-third column">{% endif %}">
                                                                 {% if section.params is defined %}
-                                                                    {{ part.text|trans(part.params, translateDomain)|raw }}
+                                                                    {{ (part.text)|trans(part.params, translateDomain)|raw }}
                                                                 {% else %}
-                                                                    {{ part.text|trans({}, translateDomain)|raw }}
+                                                                    {{ (part.text)|trans({}, translateDomain)|raw }}
                                                                 {% endif  %}
                                                             </div>
                                                         {% endfor %}
@@ -295,7 +295,11 @@
                     <ul>
                         {% if sections is defined %}
                             {% for section in sections %}
-                                <li class="lifting"><a class="menu" href="#section{{ loop.index }}">{{ section.title }}</a></li>
+                                {% if translateDomain is defined %}
+                                    <li class="lifting"><a class="menu" href="#section{{ loop.index }}">{{ (section.title)|trans({}, translateDomain) }}</a></li>
+                                {% else %}
+                                    <li class="lifting"><a class="menu" href="#section{{ loop.index }}">{{ section.title }}</a></li>
+                                {% endif %}
                             {% endfor %}
                         {% else %}
                             <li class="lifting"><a class="menu" href="#section1">About</a></li>
