--- a/src/WSP/ACLBundle/Resources/views/Security/login.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Security/login.html.twig
@@ -5,6 +5,7 @@
 {% block js %}
 <script src="/bundles/metronicadmin/plugins/jquery-validation/dist/jquery.validate.min.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/plugins/jquery-validation/dist/additional-methods.min.js" type="text/javascript"></script>
+<script src="/bundles/wspadmin/js/soft.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/scripts/coming-soon.js" type="text/javascript"></script>
 <script src="/bundles/wspacl/js/login.js" type="text/javascript"></script>
 <script type="text/javascript" src="{{ url('bazinga_exposetranslation_js', { 'domain_name': 'WSPACL' }) }}"></script>
