--- a/src/Metronic/AdminBundle/Resources/views/layout/headerEmpty.html.twig
+++ b/src/Metronic/AdminBundle/Resources/views/layout/headerEmpty.html.twig
@@ -1,5 +1,5 @@
 <!-- BEGIN LOGO -->
 <div class="logo">
-    <img src="{{ asset(logo_big) }}" alt="logo" /> 
+    <img src="{{ asset(logo_big) }}" alt="logo" id="logo" /> 
 </div>
 <!-- END LOGO -->
