--- a/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
@@ -47,7 +47,7 @@ ContactForm.init();
 {% endblock %}
 
 {% block postcontent %}
-<div class="coming-soon-countdown" id="countdown">
+<div class="coming-soon-countdown" id="countdown" style="padding-bottom: 0px;">
     <div id="defaultCountdown"></div>
 </div>
 {% endblock %}
