--- a/src/Metronic/AdminBundle/Resources/public/css/style.css
+++ b/src/Metronic/AdminBundle/Resources/public/css/style.css
@@ -4108,3 +4108,4 @@ Responsive Flip Scroll Tables
   .flip-scroll tbody tr { border-left: 1px solid #ddd; }
   .flip-scroll th:last-child,
   .flip-scroll td:last-child { border-bottom: 1px solid #ddd; }
+}
