--- a/src/WSP/PromoBundle/Resources/public/css/custom.css
+++ b/src/WSP/PromoBundle/Resources/public/css/custom.css
@@ -104,16 +104,17 @@
 
 #defaultCountdown span.countdown_section {
     background: url(../../metronicadmin/img/bg-opacity.png) repeat !important;
-    width: 113px !important;
+    width: 24.5% !important;
     text-align: center !important;
     text-shadow: 2px 2px 3px #000;
-    padding: 7px 7px !important;
+    padding: 7px 0px !important;
+    margin: 1px 1px !important; 
 }
 
 .login .content {
     background: url(../../metronicadmin/img/bg-opacity.png) repeat;
     font-family: 'helveticaregular';
-    width: 460px !important;
+    width: 467px !important;
     text-align: center !important;
 }
 
@@ -195,14 +196,14 @@ The Most Extra Small Devices Landscape Mode Only
         width: 280px !important;
     }
     .login .content {
-        width: 308px !important;
+        width: 306px !important;
     }
     .coming-soon-countdown {
         width: 318px !important;
     }
     #defaultCountdown span.countdown_section {
         font-size: 0.9em !important;
-        width: 75px !important;
+        width: 24.3% !important;
         padding: 5px 5px !important;
     }
     #defaultCountdown span.countdown_amount {
