--- a/src/WSP/PromoBundle/Resources/views/Default/vertical.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/vertical.html.twig
@@ -7,8 +7,8 @@
 {% endblock %}
 {% block js %}
 <script src="/bundles/wspadmin/js/soft.js" type="text/javascript"></script>
-<script src="/bundles/metronicadmin/plugins/jquery-validation/dist/jquery.validate.min.js" type="text/javascript"></script>
-<script src="/bundles/metronicadmin/plugins/jquery-validation/dist/additional-methods.min.js" type="text/javascript"></script>
+<script src="/bundles/metronicadmin/plugins/jquery-validation/src/jquery.validate.min.js" type="text/javascript"></script>
+<script src="/bundles/metronicadmin/plugins/jquery-validation/src/additional-methods.min.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/plugins/countdown/jquery.countdown.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/scripts/coming-soon.js" type="text/javascript"></script>
 <script src="/bundles/wsppromo/js/vertical_bar.js" type="text/javascript"></script>
@@ -27,8 +27,17 @@ ContactForm.init();
     <h2>{{ 'promo.h2'|trans({}, "WSPPromo") }}</h2>
 </hgroup>
 <div class="header navbar navbar-inverse navbar-fixed-top trasparent">
-    <div class="vertical-title">
-        <span class="red">W</span>orld <span class="red">S</span>ticker <span class="solid-yellow"><span class="red">P</span>rice<span class="red">
+    <div class="vertical-bars">
+        <div class="vertical-bar vertical-title-transparent">
+            <span>
+                <span class="solid-yellow"><span class="red">P</span>rice<span class="red">
+            </span>
+        </div>
+        <div class="vertical-bar vertical-title">
+            <span>
+                <span class="red">W</span>orld <span class="red">S</span>ticker&nbsp;
+            </span>
+        </div>
     </div>
 </div>
 {% endblock %}
