--- a/src/WSP/PromoBundle/Resources/public/css/video.css
+++ b/src/WSP/PromoBundle/Resources/public/css/video.css
@@ -1,151 +1,52 @@
-@font-face {
-    font-family: 'helveticaregular';
-    src: url('../../wspadmin/fonts/helvetica-webfont.eot');
-    src: url('../../wspadmin/fonts/helvetica-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../wspadmin/fonts/helvetica-webfont.woff') format('woff'),
-         url('../../wspadmin/fonts/helvetica-webfont.ttf') format('truetype'),
-         url('../../wspadmin/fonts/helvetica-webfont.svg#helveticaregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+#intro-title-img {
+    background-image: url(/bundles/wspadmin/images/video/logo_big.png);
+    background-repeat: no-repeat;
+    padding: 0;
+    margin: 5px 0 5px -7px;
+    width: 361px;
+    height: 190px;
 }
 
-.vertical-title {
-    font-family: 'helveticaregular';
-    display: block; 
-    position: relative;
-
-    text-align: right;
-    vertical-align: middle;
-
-    border: 7px solid #ffe42e;
-    margin: 0px;
-
-    font-size: 5em;
-    color: #fff;
-
-    background: url(../../metronicadmin/img/bg-opacity.png) repeat;
-
-    -webkit-transform: rotate(-90deg);
-    -moz-transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    -o-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-
-    /*also accepts left, right, top, bottom coordinates; not required, but a good idea for styling*/ 
-    -webkit-transform-origin: 100% 0%;
-    -moz-transform-origin: 100% 0%;
-    -ms-transform-origin: 100% 00%;
-    -o-transform-origin: 100% 0%;
-    transform-origin: 100% 00%;
-
-    /* Should be unset in IE9+ I think. */
-    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+/* Smaller than standard 960 (devices and browsers) */
+@media only screen and (max-width: 959px) {
 }
 
-.vertical-title span.red{
-    color: #d10;
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+
+    #intro-title-img {
+        background-image: url(/bundles/wspadmin/images/video/logo_medium.png);
+        width: 190px;
+        height: 100px;
+        margin: 5px 0 5px -3px;
+    }
+
 }
 
-.vertical-title span.solid-yellow{
-    border: 8px solid #ffe42e;
-    margin: 0px;
-    color: #000;
-    background-color: #ffe42e;
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {
 }
 
-.slogan {
-    font-family: 'helveticaregular';
-    margin-top: 0px;
-    text-align: center;
-    color: #ffe42e !important;
-    text-shadow: 2px 2px 3px #000;
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+
+    #intro-title-img {
+        background-image: url(/bundles/wspadmin/images/video/logo_medium.png);
+        width: 190px;
+        height: 100px;
+        margin: 5px 0 5px -3px;
+    }
+
 }
 
-.testo {
-    font-family: 'helveticaregular';
-    text-align: justify;
-    font-size: 1.25em;
-    text-shadow: 0px 0px 4px #000;
-    margin-bottom: 10px;
-}
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+@media only screen and (max-width: 479px) {
 
-.testocentrato {
-    font-family: 'helveticaregular';
-    text-align: center;
-    font-size: 1.25em;
-    text-shadow: 0px 0px 4px #000;
-    margin-bottom: 10px;
-}
+    #intro-title-img {
+        background-image: url(/bundles/wspadmin/images/video/logo_small.png);
+        width: 154px;
+        height: 81px;
+        margin: 5px 0 5px -3px;
+    }
 
-.testocentrato p {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.grassetto {
-    text-align: justify;
-    color: #fff !important;
-    font-size: 1.25em;
-    text-shadow: 0px 0px 4px #000;
-    margin-top: 10px;
-}
-
-.grassetto a {
-    color: #ffe42e !important;
-}
-
-.coming-soon-countdown {
-    font-family: 'helveticaregular';
-    width: 500px ;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
-
-#defaultCountdown span.countdown_section {
-    background: url(../../metronicadmin/img/bg-opacity.png) repeat !important;
-    width: 113px !important;
-    text-align: center !important;
-    text-shadow: 2px 2px 3px #000;
-    padding: 7px 7PX !important;
-}
-
-.login .content {
-    background: url(../../metronicadmin/img/bg-opacity.png) repeat;
-    font-family: 'helveticaregular';
-    width: 460px !important;
-    text-align: center !important;
-}
-
-.no-padding {
-    padding: 0px !important;
-}
-
-.padding5 {
-    padding: 5px !important;
-}
-
-.padding10 {
-    padding: 10px !important;
-}
-
-.no-margin {
-    margin: 0px !important;
-}
-
-.margin5 {
-    margin: 5px !important;
-}
-
-.margin10 {
-    margin: 10px !important;
-}
-
-.login .logo {
-    margin-top: 30px !important;
-}
-
-.input-group {
-    font-family: 'helveticaregular';
-    margin: 0 auto;
 }
