--- a/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
@@ -3,8 +3,8 @@
 {% block css %}
 <link href="/bundles/metronicadmin/css/pages/coming-soon.css" rel="stylesheet" type="text/css"/>
 <link href="/bundles/wsppromo/css/custom.css" rel="stylesheet" type="text/css"/>
-
 {% endblock %}
+
 {% block js %}
 <script src="/bundles/wspadmin/js/soft.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/plugins/jquery-validation/src/jquery.validate.min.js" type="text/javascript"></script>
@@ -16,8 +16,8 @@
 <script type="text/javascript" src="{{ url('bazinga_exposetranslation_js', { 'domain_name': 'WSPPromo' }) }}"></script>
 {% endblock %}
 {% block ready_js %}
-ComingSoon.init();
 VerticalJustify.init();
+ComingSoon.init();
 ContactForm.init();
 {% endblock %}
 
@@ -31,7 +31,7 @@ ContactForm.init();
 {% block contentcss %}padding5{% endblock %}
 
 {% block content %}
-<div class="testocentrato" id="contact">
+<div class="testocentrato">
     <p>{{ 'contact.question'|trans({}, "WSPPromo")|raw }}</p>
     <form class="form-inline" onsubmit="return false;">
             <div class="input-group input-large">
