--- a/src/WSP/PromoBundle/Resources/views/Default/vertical.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/vertical.html.twig
@@ -12,11 +12,13 @@
 <script src="/bundles/metronicadmin/plugins/countdown/jquery.countdown.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/scripts/coming-soon.js" type="text/javascript"></script>
 <script src="/bundles/wsppromo/js/vertical_bar.js" type="text/javascript"></script>
+<script src="/bundles/wsppromo/js/vertical_justify.js" type="text/javascript"></script>
 <script src="/bundles/wsppromo/js/contact_form.js" type="text/javascript"></script>
 <script type="text/javascript" src="{{ url('bazinga_exposetranslation_js', { 'domain_name': 'WSPPromo' }) }}"></script>
 {% endblock %}
 {% block ready_js %}
 VerticalBar.init();
+VerticalJustify.init();
 ComingSoon.init();
 ContactForm.init();
 {% endblock %}
@@ -55,7 +57,7 @@ ContactForm.init();
 {% endblock %}
 
 {% block postcontent %}
-<div class="content trasparent grassetto padding10" id="contact" style="margin-top: 10px;">
+<div class="content grassetto padding10" id="contact" style="margin-top: 10px;">
     {{ 'contact.question'|trans({}, "WSPPromo")|raw }}<br/>
     <form class="form-inline" onsubmit="return false;">
             <div class="input-group input-large">
