--- a/src/WSP/PromoBundle/Resources/views/base.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/base.html.twig
@@ -22,6 +22,9 @@
     </head>
     <body>
         {% block content %}{% endblock %}
+        <script type="text/javascript">
+            {% block var_js %}{% endblock %}
+        </script>
         {% block js %}{% endblock %}
         <script type="text/javascript">
             {% block inline_js %}{% endblock %}
