Conclusa fase di registrazione con 4 step

--- a/src/WSP/ACLBundle/Resources/views/Registration/checkEmail.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Registration/checkEmail.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends "::empty.html.twig" %}
 
 {% block content %}
     <p>{{ 'registration.check_email'|trans({'%email%': user.email}, 'FOSUserBundle') }}</p>
