--- a/src/WSP/ACLBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Registration/confirmed.html.twig
@@ -2,9 +2,18 @@
 
 {% block title %}{{ 'register.welcome'|trans({'%username%': user.username}, 'WSPACL') }}{% endblock title %}
 
+{% block css %}
+<link href="/bundles/wspadmin/css/custom.css" rel="stylesheet" type="text/css"/>
+{% endblock %}
+
+{% block js %}
+<script src="/bundles/wspadmin/js/soft.js" type="text/javascript"></script>
+<script type="text/javascript" src="{{ url('bazinga_exposetranslation_js', { 'domain_name': 'WSPACL' }) }}"></script>
+{% endblock %}
+
 {% block content %}
     <p>{{ 'registration.confirmed'|trans({'%username%': user.username}, 'FOSUserBundle') }}</p>
-    <button type="button" class="btn yellow" onclick="">{{ 'register.continue'|trans({}, 'WSPACL') }}</button>
+    <button type="button" class="btn yellow" onclick="window.location='{{ path('negozio_step_1') }}';">{{ 'register.continue'|trans({}, 'WSPACL') }}</button>
     {#% if app.session is not empty %}
         {% set targetUrl = app.session.get('_security.' ~ app.security.token.providerKey ~ '.target_path') %}
         {% if targetUrl is not empty %}<p><a href="{{ targetUrl }}">{{ 'registration.back'|trans({}, 'FOSUserBundle') }}</a></p>{% endif %}
