--- a/src/WSP/ACLBundle/Resources/views/Security/login.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Security/login.html.twig
@@ -1,15 +1,18 @@
 {% extends "::empty.html.twig" %}
 
 {% block css %}
+<link href="/bundles/wspadmin/css/custom.css" rel="stylesheet" type="text/css"/>
 {% endblock %}
+
 {% block js %}
-<script src="/bundles/metronicadmin/plugins/jquery-validation/dist/jquery.validate.min.js" type="text/javascript"></script>
-<script src="/bundles/metronicadmin/plugins/jquery-validation/dist/additional-methods.min.js" type="text/javascript"></script>
+<script src="/bundles/metronicadmin/plugins/jquery-validation/src/jquery.validate.min.js" type="text/javascript"></script>
+<script src="/bundles/metronicadmin/plugins/jquery-validation/src/additional-methods.min.js" type="text/javascript"></script>
 <script src="/bundles/wspadmin/js/soft.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/scripts/coming-soon.js" type="text/javascript"></script>
 <script src="/bundles/wspacl/js/login.js" type="text/javascript"></script>
 <script type="text/javascript" src="{{ url('bazinga_exposetranslation_js', { 'domain_name': 'WSPACL' }) }}"></script>
 {% endblock %}
+
 {% block ready_js %}
 Login.init();
 {% endblock %}
