--- a/src/Metronic/AdminBundle/Resources/views/layout/content/header/breadcrumb.html.twig
+++ b/src/Metronic/AdminBundle/Resources/views/layout/content/header/breadcrumb.html.twig
@@ -56,7 +56,7 @@
     <span class="selected"></span>
 {% endif %}
 {% if item.hasChildren %}
-    <span class="arrow {% if item.extra('active') %}open{% endif %}"></span>
+    <i class="fa fa-angle-right"></i>
 {% endif %}
 {% endspaceless %}
 {% endblock %}
