--- a/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
@@ -10,44 +10,44 @@
 <script src="/bundles/metronicadmin/plugins/jquery-validation/src/jquery.validate.min.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/plugins/jquery-validation/src/additional-methods.min.js" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/plugins/countdown/jquery.countdown.js" type="text/javascript"></script>
-<script src="/bundles/metronicadmin/scripts/coming-soon.js" type="text/javascript"></script>
-<script src="/bundles/wsppromo/js/contact_form.js" type="text/javascript"></script>
+<script src="/bundles/wsppromo/js/coming-soon.js" type="text/javascript"></script>
 <script src="/bundles/wsppromo/js/vertical_justify.js" type="text/javascript"></script>
+<script src="/bundles/wsppromo/js/contact_form.js" type="text/javascript"></script>
+<script src="/bundles/ephputility/js/functions.js" type="text/javascript"></script>
 <script type="text/javascript" src="{{ url('bazinga_jstranslation_js', { 'domain_name': 'WSPPromo' }) }}"></script>
 {% endblock %}
 {% block ready_js %}
 VerticalJustify.init();
 ComingSoon.init();
 ContactForm.init();
+crossfade('block', 8000, 1000);
 {% endblock %}
-
-{% block precontent %}
-<hgroup class="no-display">
-    <h1>World Sticker Prize</h1>
-    <h2>{{ 'promo.h2'|trans({}, "WSPPromo") }}</h2>
-</hgroup>
-{% endblock %}
-
-{% block contentcss %}padding5{% endblock %}
 
 {% block content %}
-<div class="testocentrato">
-    <p>{{ 'contact.question'|trans({}, "WSPPromo")|raw }}</p>
+{% for index in range(1, 3, 1) %}
+<div id="block-{{ index }}" class="block {% if not loop.first %}no-display{% endif %}" next="block-{% if not loop.last %}{{ index + 1 }}{% else %}1{% endif %}">
+    <h3 class="slogan">{{ ('content.frasi.'~index)|trans({}, "WSPPromo")|raw }}</h3>
+    <div class="testo">
+        <p>{{ ('content.dettagli.'~index)|trans({}, "WSPPromo")|raw }}</p>
+    </div>
+</div>
+{% endfor %}
+{% endblock %}
+
+{% block postcontent %}
+<div class="content grassetto padding10" id="contact" style="margin-top: 10px;">
+    {{ 'contact.question'|trans({}, "WSPPromo")|raw }}<br/>
     <form class="form-inline" onsubmit="return false;">
             <div class="input-group input-large">
                     <input id="contact_email" type="email" class="form-control" name="contact" placeholder="{{ 'contact.placeholder'|trans({}, "WSPPromo") }}">
                     <span class="input-group-btn">
-                        <button class="btn yellow" id="contact_btn" type="subimt"><span>{{ 'contact.button'|trans({}, "WSPPromo")|raw }}</span> <i class="m-icon-swapright m-icon-white"></i></button>
+                        <button class="btn yellow" id="contact_btn" type="subimt"><span>{{ 'contact.button'|trans({}, "WSPPromo")|raw }}</span> <i class="m-icon-swapright m-icon-black"></i></button>
                     </span>
             </div>
-    </form>
-    <p>{{ 'contact.postaction'|trans({}, "WSPPromo")|raw }}</p>
-    {#{{ 'contact.number'|transchoice(richieste, {'%n%': richieste}, "WSPPromo")|raw }}<br/>#}
+    </form> {{ 'contact.postaction'|trans({}, "WSPPromo")|raw }}
+    {{ 'contact.number'|transchoice(richieste, {'%n%': richieste}, "WSPPromo")|raw }}<br/>
 </div>
-{% endblock %}
-
-{% block postcontent %}
-<div class="coming-soon-countdown padding5" id="countdown" style="padding-bottom: 0px;">
+<div class="coming-soon-countdown no-padding" style="margin-top: 0px;">
     <div id="defaultCountdown"></div>
 </div>
 {% endblock %}
