--- a/src/JF/GeneratorBundle/Resources/skeleton/controller/Template.html.twig.twig
+++ b/src/JF/GeneratorBundle/Resources/skeleton/controller/Template.html.twig.twig
@@ -4,6 +4,6 @@
 {{ bundle }}:{{ controller }}:{{ action.basename }}
 {{- '{% endblock %}' }}
 
-{{ '{% block body %}' }}
+{{ '{% block content %}' }}
 <h1>Welcome to the {{ controller }}:{{ action.basename }} page</h1>
 {{ '{% endblock %}' }}
