--- a/src/JF/ACLBundle/Resources/views/Cliente/edit.html.twig
+++ b/src/JF/ACLBundle/Resources/views/Cliente/edit.html.twig
@@ -1,6 +1,8 @@
 {% extends '::base.html.twig' %}
-{% form_theme edit_form '::form_aries_layout.html.twig' %}
-{% block body -%}
+{% if form_layout %}
+    {% form_theme edit_form form_layout %}
+{% endif %}
+{% block content %}
 <div class="page-header">
     {% if app.user.hasRole('R_EPH') %}
         <div class="icon">
