--- a/src/JF/ACLBundle/Resources/views/Cliente/show.html.twig
+++ b/src/JF/ACLBundle/Resources/views/Cliente/show.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% block body -%}
+{% block content %}
 <div class="page-header">
     <div class="icon">
         <span class="ico-sale"></span>
