--- a/src/JF/ACLBundle/Resources/views/Rubrica/index.html.twig
+++ b/src/JF/ACLBundle/Resources/views/Rubrica/index.html.twig
@@ -7,7 +7,7 @@
 {% endjavascripts %}
 {% endblock %}
     
-{% block body -%}
+{% block content %}
 <div class="page-header">
     <div class="icon">
         <span class="ico-group"></span>
