--- a/src/JF/ACLBundle/Resources/views/Utenze/index.html.twig
+++ b/src/JF/ACLBundle/Resources/views/Utenze/index.html.twig
@@ -7,7 +7,7 @@
 {% endjavascripts %}
 {% endblock %}
     
-{% block body -%}
+{% block content %}
 <div class="page-header">
     <div class="icon">
         <span class="ico-group"></span>
@@ -70,7 +70,7 @@
                                 </td>
                             {% endfor %}
                             <td class="no-padding">
-                                {% include ":commons:edit.html.twig" with {'route': path('utenze_edit', { 'slug': entity.slug })} %}
+                                <a href="{{ path('utenze_edit', { 'slug': entity.slug }) }}">Modifica</a>
                                 {% if not entity.locked %}
                                     <a href="javascript:void()" slug="{{ entity.slug}}" class="button red lock">
                                         <div class="icon"><span class="ico-trash"></span></div>
