--- a/src/JF/GeneratorBundle/Resources/skeleton/crud/views/show.html.twig.twig
+++ b/src/JF/GeneratorBundle/Resources/skeleton/crud/views/show.html.twig.twig
@@ -3,7 +3,7 @@
 {% endblock extends %}
 
 {% block body %}
-{{ "{% block body -%}" }}
+{{ "{% block content %}" }}
 <div class="page-header">
     <div class="icon">
         <span class="ico-cog"></span>
