--- a/src/WSP/PromoBundle/Resources/public/css/custom.css
+++ b/src/WSP/PromoBundle/Resources/public/css/custom.css
@@ -212,6 +212,10 @@ span.red {
     margin: 0 auto;
 }
 
+.h190 {
+    height: 190px;
+}
+
 @media (min-width: 992px) and (max-width: 1200px) {  
 
 }
