--- a/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
@@ -23,6 +23,8 @@ ContactForm.init();
 crossfade('block', 8000, 1000);
 {% endblock %}
 
+{% block contentcss %}h190{% endblock %}
+
 {% block content %}
 {% for index in range(1, 3, 1) %}
 <div id="block-{{ index }}" class="block {% if not loop.first %}no-display{% endif %}" next="block-{% if not loop.last %}{{ index + 1 }}{% else %}1{% endif %}">
@@ -45,7 +47,7 @@ crossfade('block', 8000, 1000);
                     </span>
             </div>
     </form> {{ 'contact.postaction'|trans({}, "WSPPromo")|raw }}
-    {{ 'contact.number'|transchoice(richieste, {'%n%': richieste}, "WSPPromo")|raw }}<br/>
+    {#{ 'contact.number'|transchoice(richieste, {'%n%': richieste}, "WSPPromo")|raw }#}
 </div>
 <div class="coming-soon-countdown no-padding" style="margin-top: 0px;">
     <div id="defaultCountdown"></div>
