--- a/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
@@ -20,7 +20,7 @@
 VerticalJustify.init();
 ComingSoon.init();
 ContactForm.init();
-crossfade('block', 8000, 1000);
+crossfade('block', 12000, 1000, 1);
 {% endblock %}
 
 {% block contentcss %}h190{% endblock %}
