--- a/src/WSP/PromoBundle/Resources/public/css/custom.css
+++ b/src/WSP/PromoBundle/Resources/public/css/custom.css
@@ -212,8 +212,8 @@ span.red {
     margin: 0 auto;
 }
 
-.h190 {
-    height: 190px;
+.hfix {
+    height: 220px;
 }
 
 @media (min-width: 992px) and (max-width: 1200px) {  
