--- a/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
@@ -34,7 +34,10 @@ crossfade('block', 12000, 1000, 1);
     </div>
 </div>
 {% endfor %}
-<h3 class="slogan bottom">{{ ('content.chiusura')|trans({}, "WSPPromo")|raw }}</h3>
+<div class="testo bottom">
+    <p>{{ ('content.piuinfo')|trans({}, "WSPPromo")|raw }}</p>
+    <h3 class="slogan">{{ ('content.chiusura')|trans({}, "WSPPromo")|raw }}</h3>
+</div>
 {% endblock %}
 
 {% block postcontent %}
