--- a/src/WSP/PromoBundle/Resources/public/css/custom.css
+++ b/src/WSP/PromoBundle/Resources/public/css/custom.css
@@ -169,7 +169,7 @@ span.red {
     text-align: center !important;
     text-shadow: 2px 2px 3px #000;
     padding: 7px 0px !important;
-    margin: 1px 1px !important; 
+    margin: 1px 0px 1px 2px !important; 
 }
 
 .login .content {
@@ -177,30 +177,6 @@ span.red {
     font-family: 'helveticaregular';
     width: 476px !important;
     text-align: center !important;
-}
-
-.no-padding {
-    padding: 0px !important;
-}
-
-.padding5 {
-    padding: 5px !important;
-}
-
-.padding10 {
-    padding: 10px !important;
-}
-
-.no-margin {
-    margin: 0px !important;
-}
-
-.margin5 {
-    margin: 5px !important;
-}
-
-.margin10 {
-    margin: 10px !important;
 }
 
 .login .logo {
@@ -267,7 +243,7 @@ The Most Extra Small Devices Landscape Mode Only
         width: 280px !important;
     }
     .login .content {
-        width: 316px !important;
+        width: 315px !important;
     }
     .coming-soon-countdown {
         width: 318px !important;
