Inizio pagina contatti

--- a/src/JF/CoreBundle/Resources/views/Licenze/index.html.twig
+++ b/src/JF/CoreBundle/Resources/views/Licenze/index.html.twig
@@ -60,10 +60,10 @@
                                         </td>
                                         <td>
                                             <a href="{{ path('eph_licenze_show', {'package': licenza.gruppo.package.sigla, 'gruppo': licenza.gruppo.sigla, 'sigla': licenza.sigla, 'cliente': cliente.id}) }}" class="button dblue">
-                                                <div class="icon"><span class="ico-eye"></span></div>
+                                                <div class="icon"><span class="ico-eye">SHOW</span></div>
                                             </a>
                                             <a href="{{ path('eph_licenze_buy', {'package': licenza.gruppo.package.sigla, 'gruppo': licenza.gruppo.sigla, 'sigla': licenza.sigla, 'cliente': cliente.id}) }}" class="button green">
-                                                <div class="icon"><span class="ico-shopping-cart"></span></div>
+                                                <div class="icon"><span class="ico-shopping-cart">BUY</span></div>
                                             </a>
                                         </td>
                                     {% endif %}
