--- a/src/Metronic/AdminBundle/Resources/views/layout/content/header.html.twig
+++ b/src/Metronic/AdminBundle/Resources/views/layout/content/header.html.twig
@@ -3,8 +3,8 @@
     <div class="col-md-12">
         <!-- BEGIN PAGE TITLE & BREADCRUMB-->			
         <h3 class="page-title">
-            {{ page_title }}
-            {% if page_subtitle is defined %}<small>{{ page_subtitle }}</small>{% endif %}
+            {{ page_title|raw }}
+            {% if page_subtitle is defined %}<small>{{ page_subtitle|raw }}</small>{% endif %}
         </h3>
         {{ knp_menu_render('header', {'template': 'MetronicAdminBundle::layout/content/header/breadcrumb.html.twig'}) }}
         <!-- END PAGE TITLE & BREADCRUMB-->
