--- a/src/Metronic/AdminBundle/Resources/views/layout/header/logo.html.twig
+++ b/src/Metronic/AdminBundle/Resources/views/layout/header/logo.html.twig
@@ -1,5 +1,5 @@
 <!-- BEGIN LOGO -->  
-<a class="navbar-brand" href="index.html">
+<a class="navbar-brand" href="{{ path('home') }}">
     <img src="{{ asset(logo) }}" alt="logo" class="img-responsive" />
 </a>
 <!-- END LOGO -->
