--- a/src/Metronic/AdminBundle/Resources/views/layout/header/navbar/user.html.twig
+++ b/src/Metronic/AdminBundle/Resources/views/layout/header/navbar/user.html.twig
@@ -1,7 +1,9 @@
 <!-- BEGIN USER LOGIN DROPDOWN -->
 <li class="dropdown user">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-        <img alt="" src="{{ asset(app.user.avatar) }}"/>
+        {% if app.user.avatar is defined and app.user.avatar %}
+            <img alt="" src="{{ asset(app.user.avatar) }}"/>
+        {% endif %}
         <span class="username">{{ app.user.username }}</span>
         <i class="fa fa-angle-down"></i>
     </a>
