--- a/src/WSP/PromoBundle/Resources/views/Contatto/index.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Contatto/index.html.twig
@@ -3,10 +3,6 @@
 
 {% extends '::base.html.twig' %}
 
-{% block css %}
-<link href="/bundles/ephputility/css/utility.css" rel="stylesheet" type="text/css"/>
-{% endblock %}
-
 {% block js %}
 <script src="/bundles/ephputility/js/commons/sugar-1.3.9.min.js" type="text/javascript"></script>
 <script src="/bundles/ephputility/js/functions.js" type="text/javascript"></script>
@@ -77,6 +73,7 @@
                                 <th>#</th>
                                 <th>Subject</th>
                                 <th>Inviata il</th>
+                                <th># contatti</th>
                                 <th width="40" class="TAC">Op.</th>
                             </tr>
                         </thead>
@@ -86,10 +83,12 @@
                                 <td>{{ entity.id }}</td>
                                 <td>{{ entity.subject }}</td>
                                 <td>{% if entity.createdAt %}{{ entity.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>
+                                <td>{{ entity.destinatari|length }}/{{ pagination.totalItemCount }}</td>
                                 <td><button class="btn green btn-xs" onclick="$('#body-{{ entity.id }}').toggle();">Leggi</button></td>
                             </tr>
                             <tr id="body-{{ entity.id }}" class="no-display">                            
-                                <td colspan="4">{{ entity.body|nl2br }}</td>
+                                <td colspan="3">{{ entity.body|nl2br }}</td>
+                                <td colspan="2" style="text-align: right;"><button class="btn green btn-xs" onclick="$('#body-{{ entity.id }}').toggle();">Invia a nuovi iscritti</button></td>
                             </tr>
                     {% endfor %}
                         </tbody>
