--- a/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
@@ -23,6 +23,7 @@ ComingSoon.init();
 VerticalJustify.init();
 ContactForm.init();
 crossfade('block', 12000, 1000, 1);
+Translator.locale = 'it';
 {% endblock %}
 
 {% block precontent %}
