--- a/src/WSP/ACLBundle/Resources/views/Resetting/request_content.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Resetting/request_content.html.twig
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="form-actions">
-        <button type="button" id="back-btn" class="btn">
+        <button type="button" id="back-btn" class="btn pull-left">
             <i class="m-icon-swapleft"></i> {{ 'commons.back'|trans({}, 'WSPACL') }}
         </button>
         <button type="submit" class="btn blue pull-right">
