--- a/src/WSP/ACLBundle/Resources/views/Security/login.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Security/login.html.twig
@@ -1,6 +1,7 @@
 {% extends "::empty.html.twig" %}
 
 {% block css %}
+<link href="/bundles/ephputility/css/utility.css" rel="stylesheet" type="text/css"/>
 <link href="/bundles/wspadmin/css/custom.css" rel="stylesheet" type="text/css"/>
 {% endblock %}
 
@@ -14,8 +15,8 @@
 {% endblock %}
 
 {% block ready_js %}
-Login.init();
 Translator.locale = 'it'
+Login.init();
 {% endblock %}
 
 {% block content %}
@@ -56,8 +57,8 @@ Translator.locale = 'it'
         </button>            
     </div>
     <p>{{ 'login.social'|trans({}, 'WSPACL') }}</p>
-    <div class="form-actions">
-        <ul class="social-icons margin-top-20">
+    <div class="no-margin">
+        <ul class="social-icons" style="margin: 0 auto; width: 66px">
             <li><a href="#" data-original-title="Facebook" class="facebook"></a></li>
             <li><a href="#" data-original-title="Twitter" class="twitter"></a></li>
         </ul>
