Fine fix visuali

--- a/src/WSP/ACLBundle/Resources/views/Negozio/form/progress.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Negozio/form/progress.html.twig
@@ -2,25 +2,25 @@
     <ul class="nav nav-pills nav-justified steps">
         <li{% if step >= 1 %} class="active"{% endif %}>
             <a href="javascript:;" data-toggle="tab" class="step">
-                <span class="number">1</span>
+                <span class="number margin10">1</span>
                 <span class="desc">{{ 'negozio.step1.titolo'|trans({}, 'WSPACL') }}</span>   
             </a>
         </li>
         <li{% if step >= 2 %} class="active"{% endif %}>
             <a href="javascript:;" data-toggle="tab" class="step">
-                <span class="number">2</span>
+                <span class="number margin10">2</span>
                 <span class="desc">{{ 'negozio.step2.titolo'|trans({}, 'WSPACL') }}</span>   
             </a>
         </li>
         <li{% if step >= 3 %} class="active"{% endif %}>
             <a href="javascript:;" data-toggle="tab" class="step">
-                <span class="number">3</span>
+                <span class="number margin10">3</span>
                 <span class="desc">{{ 'negozio.step3.titolo'|trans({}, 'WSPACL') }}</span>   
             </a>
         </li>
         <li{% if step >= 4 %} class="active"{% endif %}>
             <a href="javascript:;" data-toggle="tab" class="step">
-                <span class="number">4</span>
+                <span class="number margin10">4</span>
                 <span class="desc">{{ 'negozio.step4.titolo'|trans({}, 'WSPACL') }}</span>   
             </a> 
         </li>
