--- a/src/WSP/ACLBundle/Resources/views/Negozio/form/step4.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Negozio/form/step4.html.twig
@@ -5,6 +5,6 @@
     <div class="panel-body">
         WSP mette in vendita crediti con cui poter acquistare servizi avanzati. 
         Questi dati ci servono per emettere regolare fattura. 
-        Puoi modificare la precompilazione enza aver paura di modificare i dati che hai appena inserito
+        Puoi modificare la precompilazione senza aver paura di modificare i dati che hai appena inserito
     </div>
 </div>
