--- a/src/WSP/ACLBundle/Resources/views/Negozio/form.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Negozio/form.html.twig
@@ -2,6 +2,7 @@
 {% form_theme form 'MetronicAdminBundle::form/empty.html.twig' %}
 
 {% block css %}
+<link href="/bundles/ephputility/css/utility.css" rel="stylesheet" type="text/css"/>
 <link href="/bundles/wspadmin/css/custom.css" rel="stylesheet" type="text/css"/>
 <link href="/bundles/metronicadmin/plugins/bootstrap-datepicker/css/datepicker.css" rel="stylesheet" type="text/css"/>
 {% endblock %}
